--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.29",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
