--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "swiper": "^11.1.10",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
