--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.3.29",
     "next": "14.2.4",
     "react": "^18",
