chore: js-cookie 추가 (#93)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.3.29",
+    "js-cookie": "^3.0.5",
+    "little-state-machine": "^4.8.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -40,6 +42,7 @@
     "@storybook/test": "^8.2.7",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@tanstack/react-query-devtools": "^5.51.15",
+    "@types/js-cookie": "^3",
     "@types/next-pwa": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
